Fix heading alignments

--- a/main.css
+++ b/main.css
@@ -850,11 +850,11 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: green;
+  /* background: green; */
 }
 
 .get-in-touch-inner-container {
-  background: red;
+  /* background: red; */
   display: block;
   width: 100%;
 }
@@ -870,8 +870,10 @@ body {
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .get-in-touch-col-left {
     background: hotpink;
-    width: 70%;
-    font-size: 70%;
+    width: 80%;
+    font-size: 80%;
+    position: relative;
+    z-index: 2;
   }
 }
 
@@ -902,18 +904,19 @@ body {
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .email-h1 {
-    text-align: left;
+    text-align: right;
     padding-left: 2%;
     max-width: 60%;
+    margin-left: 5%;
   }
 }
 
 
-/* RIGHT COL */
+/* RIGHT COL DIV */
 
 .get-in-touch-col-right {
   background: orange;
-  text-align: center;
+  text-align: end;
   padding: 2%;
 }
 
@@ -922,7 +925,10 @@ body {
     background: rebeccapurple;
     font-size: 70%;
     width: 80%;
-    margin-left: 20%;
+    margin-left: 10%;
+    margin-top: -2%;
+    position: absolute;
+
   }
 }
 
